# Discord-AI-Chat

./: .gitignore  AGENTS.md  Dockerfile  README.md  config.py  format.sh  logging.yaml  pyproject.toml  requirements.txt  router.py  state.py
cogs/: admin.py
config/: settings.example.toml
core/: discord_client.py
handlers/: text.py  text_with_image.py
scripts/: run_dev.sh
services/: image_utils.py  openai_client.py
src/discord_gpt5_bot/: __main__.py
tests/: test_chunk.py  test_handlers.py  test_openai_client.py  test_router.py
utils/: chunk.py
